--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12070,6 +12070,9 @@ on current Chronojump version.</property>
                                                 <property name="column_spacing">6</property>
                                                 <property name="row_spacing">8</property>
                                                 <child>
+                                                  <placeholder/>
+                                                </child>
+                                                <child>
                                                   <widget class="GtkLabel" id="label233">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
@@ -12102,7 +12105,7 @@ on current Chronojump version.</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
                                                     <property name="xalign">0</property>
-                                                    <property name="label">&lt;b&gt;Elastic Index&lt;/b&gt;</property>
+                                                    <property name="label">&lt;b&gt;Elastic&lt;/b&gt;</property>
                                                     <property name="use_markup">True</property>
                                                   </widget>
                                                   <packing>
@@ -12117,7 +12120,7 @@ on current Chronojump version.</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
                                                     <property name="xalign">0</property>
-                                                    <property name="label">&lt;b&gt;Arms using Index&lt;/b&gt;</property>
+                                                    <property name="label">&lt;b&gt;Arms using&lt;/b&gt;</property>
                                                     <property name="use_markup">True</property>
                                                   </widget>
                                                   <packing>
@@ -12132,7 +12135,7 @@ on current Chronojump version.</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
                                                     <property name="xalign">0</property>
-                                                    <property name="label">&lt;b&gt;Reactive-reflex Index&lt;/b&gt;</property>
+                                                    <property name="label">&lt;b&gt;Reactive-reflex&lt;/b&gt;</property>
                                                     <property name="use_markup">True</property>
                                                   </widget>
                                                   <packing>
@@ -12223,9 +12226,6 @@ on current Chronojump version.</property>
                                                     <property name="x_options">GTK_FILL</property>
                                                     <property name="y_options"/>
                                                   </packing>
-                                                </child>
-                                                <child>
-                                                  <placeholder/>
                                                 </child>
                                                 <child>
                                                   <widget class="GtkLabel" id="label243">
@@ -12381,7 +12381,7 @@ on current Chronojump version.</property>
                                                   <widget class="GtkLabel" id="label178">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
-                                                    <property name="label">&lt;b&gt;Elastic Hability&lt;/b&gt;</property>
+                                                    <property name="label">&lt;b&gt;Elastic&lt;/b&gt;</property>
                                                     <property name="use_markup">True</property>
                                                   </widget>
                                                   <packing>
@@ -12395,7 +12395,7 @@ on current Chronojump version.</property>
                                                   <widget class="GtkLabel" id="label186">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
-                                                    <property name="label">&lt;b&gt;Arms Hability&lt;/b&gt;</property>
+                                                    <property name="label">&lt;b&gt;Arms&lt;/b&gt;</property>
                                                     <property name="use_markup">True</property>
                                                   </widget>
                                                   <packing>
@@ -12409,7 +12409,7 @@ on current Chronojump version.</property>
                                                   <widget class="GtkLabel" id="label190">
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
-                                                    <property name="label">&lt;b&gt;Reactive-reflex Hability&lt;/b&gt;</property>
+                                                    <property name="label">&lt;b&gt;Reactive-reflex&lt;/b&gt;</property>
                                                     <property name="use_markup">True</property>
                                                   </widget>
                                                   <packing>
@@ -12988,6 +12988,9 @@ low ressistance</property>
                                                     <property name="x_options"/>
                                                     <property name="y_options"/>
                                                   </packing>
+                                                </child>
+                                                <child>
+                                                  <placeholder/>
                                                 </child>
                                                 <child>
                                                   <placeholder/>
@@ -17662,6 +17665,9 @@ low ressistance</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
@@ -22604,6 +22610,9 @@ by you</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                     </child>
                   </widget>
@@ -22993,6 +23002,9 @@ by you</property>
                             <property name="x_options">GTK_FILL</property>
                             <property name="y_options"/>
                           </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
                         </child>
                         <child>
                           <placeholder/>
@@ -25550,6 +25562,9 @@ by you</property>
               <placeholder/>
             </child>
             <child>
+              <placeholder/>
+            </child>
+            <child>
               <widget class="GtkButton" id="button_video_url">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -25572,6 +25587,9 @@ by you</property>
                 <property name="x_options"/>
                 <property name="y_options"/>
               </packing>
+            </child>
+            <child>
+              <placeholder/>
             </child>
             <child>
               <placeholder/>
@@ -39640,6 +39658,24 @@ options</property>
                             <child>
                               <placeholder/>
                             </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
                           </widget>
                         </child>
                       </widget>
@@ -40831,6 +40867,18 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="n_columns">4</property>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
                     <child>
                       <placeholder/>
                     </child>
@@ -43709,9 +43757,6 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                                       <placeholder/>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
                                       <widget class="GtkLabel" id="label218">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
@@ -44082,6 +44127,9 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                                         <property name="left_attach">2</property>
                                         <property name="right_attach">3</property>
                                       </packing>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
                                     </child>
                                     <child>
                                       <placeholder/>
@@ -49051,6 +49099,9 @@ It starts before and arrives there with some speed.</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                       <packing>
                         <property name="left_attach">2</property>
@@ -49077,6 +49128,9 @@ It starts before and arrives there with some speed.</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options"/>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
@@ -50010,6 +50064,9 @@ It starts before and arrives there with some speed.</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options">GTK_FILL</property>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
